Fix width of sidebar modules in narrow mode in variant A
We made the sidebar 100% wide in narrow mode, but only for variant C/D,
not for variant A.

The homepage still doesn't look great in narrow mode (<800px viewport
width), but this makes it a lot less bad.

Bug: T263068

--- a/modules/homepage/ext.growthExperiments.Homepage.less
+++ b/modules/homepage/ext.growthExperiments.Homepage.less
@@ -291,6 +291,8 @@ body.mw-special-Homepage.growthexperiments-homepage-user-variant-A {
 			}
 
 			.growthexperiments-homepage-group-sidebar {
+				width: 100%;
+
 				&-subgroup-primary,
 				&-subgroup-secondary {
 					display: flex;
